# humanDetectionModule

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  readme.md
app/: CMakeLists.txt  Descriptor.cpp  HumanDetector.cpp  ImageInput.cpp  ImageOutput.cpp  ReaderWriter.cpp  main.cpp
docs/html/: CMakeLists_8txt.html  CPPCheckResult_8txt.html  CppLintResult_8txt.html  DescriptorMock_8hpp.html  DescriptorMock_8hpp__dep__incl.map  DescriptorMock_8hpp__dep__incl.md5  DescriptorMock_8hpp__incl.map  DescriptorMock_8hpp__incl.md5  DescriptorMock_8hpp_source.html  Descriptor_8cpp.html  Descriptor_8cpp__incl.map  Descriptor_8cpp__incl.md5  Descriptor_8hpp.html  Descriptor_8hpp__dep__incl.map  Descriptor_8hpp__dep__incl.md5  Descriptor_8hpp__incl.map  Descriptor_8hpp__incl.md5  Descriptor_8hpp_source.html  HumanDetectorTest_8cpp.html  HumanDetectorTest_8cpp__incl.map  HumanDetectorTest_8cpp__incl.md5  HumanDetector_8cpp.html  HumanDetector_8cpp__incl.map  HumanDetector_8cpp__incl.md5  HumanDetector_8hpp.html  HumanDetector_8hpp__dep__incl.map  HumanDetector_8hpp__dep__incl.md5  HumanDetector_8hpp__incl.map  HumanDetector_8hpp__incl.md5  HumanDetector_8hpp_source.html  IDescriptor_8hpp.html  IDescriptor_8hpp__dep__incl.map  IDescriptor_8hpp__dep__incl.md5  IDescriptor_8hpp__incl.map  IDescriptor_8hpp__incl.md5  IDescriptor_8hpp_source.html  IReaderWriter_8hpp.html  IReaderWriter_8hpp__dep__incl.map  IReaderWriter_8hpp__dep__incl.md5  IReaderWriter_8hpp__incl.map  (+118 more)
docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  (+4 more)
docs/latex/: CMakeLists_8txt.tex  CPPCheckResult_8txt.tex  CppLintResult_8txt.tex  DescriptorMock_8hpp.tex  DescriptorMock_8hpp__dep__incl.md5  DescriptorMock_8hpp__incl.md5  Descriptor_8cpp.tex  Descriptor_8cpp__incl.md5  Descriptor_8hpp.tex  Descriptor_8hpp__dep__incl.md5  Descriptor_8hpp__incl.md5  HumanDetectorTest_8cpp.tex  HumanDetectorTest_8cpp__incl.md5  HumanDetector_8cpp.tex  HumanDetector_8cpp__incl.md5  HumanDetector_8hpp.tex  HumanDetector_8hpp__dep__incl.md5  HumanDetector_8hpp__incl.md5  IDescriptor_8hpp.tex  IDescriptor_8hpp__dep__incl.md5  IDescriptor_8hpp__incl.md5  IReaderWriter_8hpp.tex  IReaderWriter_8hpp__dep__incl.md5  IReaderWriter_8hpp__incl.md5  ImageInputTest_8cpp.tex  ImageInputTest_8cpp__incl.md5  ImageInput_8cpp.tex  ImageInput_8cpp__incl.md5  ImageInput_8hpp.tex  ImageInput_8hpp__dep__incl.md5  ImageInput_8hpp__incl.md5  ImageOutputTest_8cpp.tex  ImageOutputTest_8cpp__incl.md5  ImageOutput_8cpp.tex  ImageOutput_8cpp__incl.md5  ImageOutput_8hpp.tex  ImageOutput_8hpp__dep__incl.md5  ImageOutput_8hpp__incl.md5  ReaderWriterMock_8hpp.tex  ReaderWriterMock_8hpp__dep__incl.md5  (+39 more)
include/: Descriptor.hpp  HumanDetector.hpp  IDescriptor.hpp  IReaderWriter.hpp  ImageInput.hpp  ImageOutput.hpp  ReaderWriter.hpp
reports/: CPPCheckResult.txt  CppLintResult.txt
test/: CMakeLists.txt  DescriptorMock.hpp  HumanDetectorTest.cpp  ImageInputTest.cpp  ImageOutputTest.cpp  ReaderWriterMock.cpp  ReaderWriterMock.hpp  main.cpp  test.cpp
